--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
+[workspace]
+
 [package]
 name = "njvm"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+authors = ["Clemens Horn <clemens.horn@mni.thm.de>"]
+description = "Virtual Machine for Ninja"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lib = { path = "lib" }
+structopt = { version = "0.3", default-features = false }
