--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "KSP"]
-	path = KSP
-	url = git@github.com:clemenscodes/KSP.git
-[submodule "cardano"]
-	path = cardano
-	url = git@github.com:crc-cardano-stakepool/cardano.git
+[submodule "contrib/KSP_public"]
+	path = contrib/KSP_public
+	url = https://git.thm.de/arin07/KSP_public
