--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+[workspace]
+
 [package]
 name = "njvm"
 version = "0.1.0"
@@ -11,3 +13,6 @@ assert_cmd = "2.0.4"
 anyhow = "1.0.53"
 predicates = "2.1.1"
 difference = "2.0"
+
+[dependencies]
+lib = { path = "lib"}
