--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 license = "MIT"
 authors = ["Clemens Horn <clemens.horn@mni.thm.de>"]
 description = "Virtual Machine for Ninja"
+links = "bigint"
+build = "build.rs"
 
 [dev-dependencies]
 assert_cmd = "2.0.4"
