--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ description = "Virtual Machine for Ninja"
 links = "bigint"
 build = "build.rs"
 
+[build-dependencies]
+bindgen = "0.60.1"
+
 [dev-dependencies]
 assert_cmd = "2.0.4"
 anyhow = "1.0.53"
